# nautilus-mcp-server

./: .env.docker  .env.example  .gitignore  README.md  adapters.py  config.py  docker-compose.yml  formatter.py  package-lock.json  package.json  pyproject.toml  requirements.txt  saved_queries.json.example  server.py  tsconfig.json  validator.py
.cursor/: mcp.json.example
docs/: DOCKER_TEST.md
nautilus_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: build.mjs  bump-version.mjs
src/: __init__.py  bootstrap.py  cli.ts  index.ts  server.ts  stdio-guard.ts
src/adapters/: __init__.py  base.py
src/config/: __init__.py  config-service.ts  saved_queries.py  settings.py
src/context/: app-context.ts
src/domain/: __init__.py  models.py  ports.py  query_safety.py
src/mongodb/: mongodb.adapter.ts  mongodb.service.ts
src/redis/: redis.adapter.ts  redis.service.ts
src/resources/: nautilus-resources.ts
src/shared/: error-service.ts  formatter-service.ts  query-result-clip.ts  tool-result.ts  tool-runner.ts  types.ts
src/sql/: sql-engine-types.ts  sql-engine.port.ts  sql-query.validator.test.ts  sql-query.validator.ts  sql-read.service.ts
src/tools/: __init__.py  audit_tools.py  common_tools.py  comparison_tools.py  confirm_write_tools.py  discovery_tools.py  index.ts  nosql_tools.py  query_extra_tools.py  saved_queries_tools.py  sql_tools.py
src/types/: ambient-modules.d.ts
src/use_cases/: __init__.py  connection.py  execute_query.py  introspect_schema.py
src/utils/: __init__.py  error_handler.py  (+3 more)
(+27 files in other folders)
